force-app/main/default/objects/Subscriber__c/Subscriber__c.object-meta.xml
<CustomObject>
    <label>Subscriber</label>
    <nameField>
        <label>Subscriber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>