force-app/main/default/objects/Subscriber__c/fields/Data_Used__c.field-meta.xml
<CustomField>
    <fullName>Data_Used__c</fullName>
    <label>Data Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>