force-app/main/default/objects/Subscriber__c/fields/Date_Joined__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Joined</label>
    <type>Date</type>
</CustomField>